// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > has horizontal orientation 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 h-[1px] w-full bg-base-content/10"
    data-orientation="horizontal"
    data-testid="separator"
    role="none"
  />
</DocumentFragment>
`;

exports[`Separator > has horizontal orientation by default 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 h-[1px] w-full bg-base-content/10"
    data-orientation="horizontal"
    data-testid="separator"
    role="none"
  />
</DocumentFragment>
`;

exports[`Separator > has vertical orientation 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 h-full w-[1px] bg-base-content/10"
    data-orientation="vertical"
    data-testid="separator"
    role="none"
  />
</DocumentFragment>
`;

exports[`Separator > is non presentational/decorative 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 h-[1px] w-full bg-base-content/10"
    data-orientation="horizontal"
    data-testid="separator"
    role="separator"
  />
</DocumentFragment>
`;
